@@ -7,6 +7,9 @@ Release ...
   been removed.
 * [nt]roff: The static limit on the number of nested diversions has been
   removed.
+* dpost: The inclusion of PostScript pictures has been fixed; it could
+  generate invalid PostScript programs since release 051025 under certain
+  circumstances.
 * -man macros: Fixed the output of a very long line following ".TP".
 * -mdoc macros: Changed the names of Courier fonts to \f(CW \f(CI to
   match those of troff.
